# go/model_drop_cells_body.go
@@ -1,0 +1,16 @@
+/*
+ * REST API сервиса интеграции кассетниц ТЛД
+ *
+ * Интерфейс Прикладного Программирования выдачи ТЛД
+ *
+ * API version: 1.0
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type DropCellsBody struct {
+	// Идентификатор УВД
+	DispenserID string `json:"dispenserID,omitempty"`
+	// Идентификатор дозиметра
+	DosimeterID string `json:"dosimeterID,omitempty"`
+}
