# go/model_tld_contamination_body.go
@@ -1,0 +1,18 @@
+/*
+ * REST API сервиса интеграции кассетниц ТЛД
+ *
+ * Интерфейс Прикладного Программирования выдачи ТЛД
+ *
+ * API version: 1.0
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type TldContaminationBody struct {
+	// Идентификатор дозиметра
+	DosimeterID string `json:"dosimeterID,omitempty"`
+	// Дата и время события
+	Datetime string `json:"datetime,omitempty"`
+	// Доза загрязнения (необязательно)
+	Dose string `json:"dose,omitempty"`
+}
