# go/model_tld_take_body.go
@@ -1,0 +1,20 @@
+/*
+ * REST API сервиса интеграции кассетниц ТЛД
+ *
+ * Интерфейс Прикладного Программирования выдачи ТЛД
+ *
+ * API version: 1.0
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type TldTakeBody struct {
+	// Идентификатор ячейки
+	CellID string `json:"Cell_ID,omitempty"`
+	// Идентификатор дозиметра
+	DosimeterID string `json:"dosimeterID,omitempty"`
+	// Дата и время события
+	Datetime string `json:"datetime,omitempty"`
+	// Состояние датчика наличия дозиметра
+	Presence string `json:"presence,omitempty"`
+}
